--- a/css/styles.css
+++ b/css/styles.css
@@ -226,6 +226,11 @@ figcaption {
   padding: 4em 2em 0 0 ;
 }
 
+#event_19 > figure:nth-child(5) > figcaption {
+  width: 22%;
+  padding: 4em 2em 0 0 ;
+}
+
 #event_35 > figure > .flush-right {
   max-width: none;
   margin-left: 0;
