--- a/css/mobile.css
+++ b/css/mobile.css
@@ -77,7 +77,7 @@ a:hover,a:focus, {
 blockquote {
   padding: 2em 2em 2em 4em;
   font-family: 'Monda', Sans-Serif;
-  font-size: .75em;
+  font-size: 22px;
   color: white;
   background: rgb(159,128,71);
   background: linear-gradient(90deg, rgba(159,128,71,0) 0%, rgba(159,128,71,0.17130602240896353) 4%, rgba(159,128,71,1) 4%, rgba(159,128,71,0) 73%);
@@ -242,6 +242,10 @@ figcaption {
   width: 78%;
   margin-top: 1em;
   overflow-wrap: break-word;
+}
+
+#event_1 > p {
+  font-size: 36px;
 }
 
 .img-alec {
@@ -515,7 +519,7 @@ main > div.card:nth-child(1) {
 
 p {
   Font-Family: 'Monda', Sans-Serif;
-  Font-Size: 1.15em;
+  Font-Size: 22px;
   color: white;
 }
 
