--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,7 @@ body {
     border-left: 15px solid transparent;
     border-right: 15px solid transparent;
     border-top: 40px solid #9F8047;
+    display: block;
     height: 0;
     left: 13vw;
     position: sticky;
@@ -253,6 +254,10 @@ figcaption {
 #event_1 {
   top: -26vh;
   height: 54vh;
+}
+
+#event_1 > p {
+    font-size: 16px;
 }
 
 .img-alec {
@@ -419,6 +424,7 @@ img {
   border-left: 13px solid transparent;
   border-right: 13px solid transparent;
   border-top: 35px solid black;
+  display: block;
   height: 0;
   transform: translate(-13px, -39px);
   width: 0;
@@ -429,6 +435,7 @@ img {
 
 .inner-arrow:hover {
   border-top: 35px solid #9F8047;
+  display: block;
 }
 
 .javascript-card-visibility {
